cs360/lab3/safe/tmp-030-correct-stderr.txt
tf3.c:7:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘char’
 staticc char *fred = "I cannt splll thngs";
         ^
Command failed.  Exitting
